force-app/main/default/objects/RRARelationships__c/RRARelationships__c.object-meta.xml
<CustomObject>
    <label>RRA Relationships</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RRA Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>