force-app/main/default/objects/RRARelationships__c/fields/Diagnostics__c.field-meta.xml
<CustomField>
    <fullName>Diagnostics__c</fullName>
    <label>Diagnostics</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>