force-app/main/default/objects/RRARelationships__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>RecordType</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>