force-app/main/default/objects/RRARelationships__c/fields/RelationshipJson__c.field-meta.xml
<CustomField>
    <fullName>RelationshipJson__c</fullName>
    <label>RelationshipJson</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>